--- a/style.css
+++ b/style.css
@@ -8,17 +8,15 @@
 
 body {
   position: relative;
-}
-.Top {
   height: 100vh;
   widows: 100%;
-  background-image: linear-gradient(
-    to right,
-    rgb(175, 169, 169),
-    rgb(207, 207, 204),
-    rgb(211, 211, 211)
-  );
+  padding: 25px;
+  background-image: linear-gradient(to right,
+      rgb(175, 169, 169),
+      rgb(207, 207, 204),
+      rgb(211, 211, 211));
 }
+
 nav {
   display: flex;
   align-items: center;
@@ -26,6 +24,7 @@ nav {
   padding-left: 3%;
   padding-right: 4%;
 }
+
 .Portflio {
   color: rgb(13, 13, 14);
   font-size: 40px;
@@ -37,20 +36,100 @@ nav ul {
   flex: 1;
   text-align: right;
 }
+
 nav ul li {
   list-style: none;
   display: inline-block;
   padding: 0px 25px;
   border: 1px solid rgba(182, 173, 236, 0.133);
   border-radius: 20px;
-  //background-color: rgb(206, 192, 129);
+  /* background-color: rgb(206, 192, 129); */
 }
+
 nav ul li a {
   color: rgb(24, 23, 23);
   text-decoration: none;
   font-size: 20px;
   font-weight: bold;
 }
+
 nav ul li a:hover {
-  color: rgb(227, 8, 8);
+  color: rgba(58, 172, 58, 0.472);
+}
+
+/* main section */
+.main {
+  display: grid;
+  grid-template-columns: 450px 1fr;
+  margin-top: 10%;
+  padding: 0 50px;
+  column-gap: 12%;
+}
+
+.main .img img {
+  width: 400px;
+  object-fit: contain;
+}
+
+.main h1 {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  margin-bottom: 30px;
+}
+
+.main .main-text span {
+  color: rgb(255, 255, 255);
+}
+
+.main h3 {
+  margin-bottom: 15px;
+}
+
+.main p {
+  letter-spacing: 1px;
+  line-height: 17px;
+  margin-bottom: 25px;
+}
+
+.main button {
+  padding: 10px 25px;
+  border: none;
+  border-radius: 6px;
+  background-color: rgb(58, 172, 58);
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.main button:hover {
+  letter-spacing: 2px;
+  transition: 0.2s ease;
+}
+
+.main a:hover {
+  opacity: 0.7;
+}
+
+.main .fa-brands {
+  color: rgb(123, 123, 123);
+  font-size: 22px;
+  margin-right: 17px;
+  margin-bottom: 15px;
+}
+
+@media (max-width: 768px) {
+  nav ul li {
+    display: inline-block;
+  }
+
+  .main {
+    display: block;
+  }
+
+  .main .img {
+    padding: 0;
+  }
+
+  .main img {
+    max-width: 300px;
+  }
 }
