--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ nav ul li a:hover {
   border: none;
   border-radius: 6px;
   background-color: rgb(58, 172, 58);
+  color: #fff;
   cursor: pointer;
   margin-bottom: 20px;
 }
